working on getpostbyauthorid
