# controllers/users.js
@@ -12,14 +12,14 @@ const getAllUsers = async (req, res) => {
 
 const getOneUser = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const result = await dbFunctions.getMongoDb("users").findOne({ _id: userId });
+  const result = await dbFunctions.getMongoDb("users").findOne({ auth0Id: req.body.auth0Id });
   res.setHeader("Content-Type", "application/json");
   res.status(200).json(result);
 };
 
 const createUser = async (req, res) => {
   const user = {
-    givenName: req.body.givenName,
+    auth0Id: req.body.auth0Id,
     firstName: req.body.firstName,
     lastName: req.body.lastName,
     birthday: req.body.birthday,
