# routes/users.js
@@ -4,7 +4,7 @@ const usersController = require('../controllers/users');
 
 router.get('/', usersController.getAllUsers);
 
-router.get('/:id', usersController.getOneUser);
+router.get('/:auth0id', usersController.getOneUser);
 
 router.post('/', usersController.createUser);
 
